test/rules/single_criterion/pvc_storage_class/contains_any/config.json
{
  "description": "Test single criteria rule (PVC storage class contains any foo or bar)",
  "runKwctl": true,
  "testWorkspace": "../fixtures/",
  "accept": [
    "pvcs/pvc_storage_class_fast.yaml",
    "pvcs/pvc_storage_class_random.yaml"
  ],
  "reject": [
    "pvcs/pvc_storage_class_foo.yaml",
    "pvcs/pvc_storage_class_bar.yaml"
  ]
}
