test/rules/single_criterion/pvc_storage_class/contains_any/policy.yaml
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  name: neuvector-rule-1000-conversion
spec:
  backgroundAudit: true
  mode: protect
  module: registry://ghcr.io/kubewarden/policies/persistentvolumeclaim-storageclass-policy:v1.1.0
  mutating: false
  policyServer: default
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - persistentvolumeclaims
  settings:
    deniedStorageClasses:
    - foo
    - bar
status:
  policyStatus: ""
